Added avi2gif project to homepage.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@ title: Lewis Oaten
   <h1>Projects</h1>
   <ul class="posts">
     <li><a href="http://github.com/caecus/PRCO303">PRCO303:</a> University final-year project.</li>
+    <li><a href="http://github.com/caecus/avi2gif">avi2gif:</a> A simple tool to convert supported AVI files into GIF animations.</li>
   </ul>
 </div>
-  
