Extended description of avi-gif.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Lewis Oaten
   
   <h1>Projects</h1>
   <ul class="posts">
-    <li><a href="http://github.com/caecus/avi2gif">avi2gif:</a> A simple tool to convert supported AVI files into GIF animations.</li>
+    <li><a href="http://github.com/caecus/avi2gif">avi2gif:</a> A simple tool to convert supported AVI files into GIF animations. Made for personal use in 2005, it grew in popularity on <a href="http://download.cnet.com/AVI2GIF/3000-2169_4-10445427.html?tag=mncol">download.com</a> and is now open source.</li>
     <li><a href="http://github.com/caecus/PRCO303">PRCO303:</a> University final-year project.</li>
   </ul>
 </div>
