Added hyperlinks for projects.

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@ title: Lewis Oaten
         <div id="projectsection">
           <ul>
 
-            <li>avi2gif
+            <li><a href="http://github.com/caecus/avi2gif">avi2gif</a>
               <ul>
                 <li>A simple tool to convert supported AVI files into GIF animations. Made for personal use in 2005, it grew in popularity on <a href="http://download.cnet.com/AVI2GIF/3000-2169_4-10445427.html?tag=mncol">download.com</a> and is now open source.</li>
               </ul>
             </li>
 
-            <li>PRCO303
+            <li><a href="http://github.com/caecus/PRCO303">PRCO303</a>
               <ul>
                 <li>University final-year project.</li>
               </ul>
