--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Lewis Oaten
 
           {% for post in site.posts %}
           <!--BLOG ENTRY1 -->
-          <span class="date"><strong>{{ post.date | date: "%d" }}</strong><em>{{ post.date | date: "%B" }}</em></span>
+          <span class="date"><strong>{{ post.date | date: "%d" }}</strong><em>{{ post.date | date: "%B" }}</em>99 Comments</span>
           <div class="blogcontent">
             <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
             <strong>{{ post.snippet }}</strong>
