Revert "Tweaked info section to be better code."
This reverts commit 00c83b58f8c43949de03e2b4b132e4129e64afe4.

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@ title: Lewis Oaten
 ---
 
         <!--INFO SECTION -->
-        <div class="section">
+        <div id="infosection">
           <h2>Info</h2>
           <p>At an early age, Lewis started taking apart PCs to develop an understanding of how they worked and also began to programme simple applications. Since then he has worked at Lockheed Martin for a placement year in industry and also, for his own interest, produced applications in languages such as PHP, Java and C#. Having completed his industrial placement year with conspicuous success, he is now in the final year of his BSc (Hons) Computing course at the University of Plymouth.</p>
-          <span id="onlinebanner">
-            <a href="http://google.com/profiles/sphyrz"><img src="/images/google.gif" alt="Google" /></a>
-            <a href="#"><img src="/images/linkedin.gif" alt="Linkedin" /></a>
-            <a href="http://github.com/caecus/"><img src="/images/github.gif" alt="GitHub" /></a>
-          </span>
+          <span id="infotab"></span>
         </div>
+        <span id="onlinebanner">
+          <a href="http://google.com/profiles/sphyrz"><img src="/images/google.gif" alt="Google" /></a>
+          <a href="#"><img src="/images/linkedin.gif" alt="Linkedin" /></a>
+          <a href="http://github.com/caecus/"><img src="/images/github.gif" alt="GitHub" /></a>
+        </span>
         <!--END INFO SECTION -->
 
         <!--BLOG SECTION -->
