--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ title: Lewis Oaten
           <span id="infotab"></span>
         </div>
         <span id="onlinebanner">
-          <a href="http://google.com/profiles/sphyrz"><img src="/images/google.gif" alt="Google" /></a>
-          <a href="#"><img src="/images/linkedin.gif" alt="Linkedin" /></a>
-          <a href="http://github.com/caecus/"><img src="/images/github.gif" alt="GitHub" /></a>
+          <a href="http://google.com/profiles/sphyrz"><img src="google.gif" alt="Google" /></a>
+          <a href="#"><img src="linkedin.gif" alt="Linkedin" /></a>
+          <a href="http://github.com/caecus/"><img src="github.gif" alt="GitHub" /></a>
         </span>
         <!--END INFO SECTION -->
 
