--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@ title: Lewis Oaten
 
         <!--INFO SECTION -->
         <div id="infosection">
-          <h2>Info</h2>
-          <p>At an early age, Lewis started taking apart PCs to develop an understanding of how they worked and also began to programme simple applications. Since then he has worked at Lockheed Martin for a placement year in industry and also, for his own interest, produced applications in languages such as PHP, Java and C#. Having completed his industrial placement year with conspicuous success, he is now in the final year of his BSc (Hons) Computing course at the University of Plymouth.</p>
+          <h1>At an early age, Lewis started taking apart PCs to develop an understanding of how they worked and also began to programme simple applications.</h1>
+          <h2>Since then he has worked at Lockheed Martin for a placement year in industry and also, for his own interest, produced applications in languages such as PHP, Java and C#. Having completed his industrial placement year with conspicuous success, he is now in the final year of his BSc (Hons) Computing course at the University of Plymouth.</h2>
           <span id="infotab"></span>
         </div>
-        <span id="onlinebanner">
-          <a href="http://google.com/profiles/sphyrz"><img src="google.gif" alt="Google" /></a>
-          <a href="#"><img src="linkedin.gif" alt="Linkedin" /></a>
-          <a href="http://github.com/caecus/"><img src="github.gif" alt="GitHub" /></a>
-        </span>
+        <span id="onlinebanner"><a id="google" href="http://google.com/profiles/sphyrz"></a><a id="linkedin" href="#"></a><a id="github" href="http://github.com/caecus/"></a></span>
         <!--END INFO SECTION -->
 
         <!--BLOG SECTION -->
