Updated Linkedin link.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Lewis Oaten
           <h2>Since then he has worked at Lockheed Martin for a placement year in industry and also, for his own interest, produced applications in languages such as PHP, Java and C#. Having completed his industrial placement year with conspicuous success, he is now in the final year of his BSc (Hons) Computing course at the University of Plymouth.</h2>
           <span id="infotab"></span>
         </div>
-        <span id="onlinebanner"><a id="google" href="http://google.com/profiles/sphyrz"></a><a id="linkedin" href="#"></a><a id="github" href="http://github.com/caecus/"></a></span>
+        <span id="onlinebanner"><a id="google" href="http://google.com/profiles/sphyrz"></a><a id="linkedin" href="http://uk.linkedin.com/in/lewisoaten"></a><a id="github" href="http://github.com/caecus/"></a></span>
         <!--END INFO SECTION -->
 
         <!--BLOG SECTION -->
