Added Twitter-Comments project.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@ title: Lewis Oaten
               </ul>
             </li>
 
+            <li><a href="http://github.com/caecus/twitter-comments">Twitter Comments</a>
+              <ul>
+                <li>A simple client-side Javascript library which allows comments for your website which also drive more traffic.</li>
+              </ul>
+            </li>
+
           </ul>
           <span id="projecttab"></span>
         </div>
