--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@ title: Lewis Oaten
         <div id="projectsection">
           <ul>
 
-            <li><a href="http://github.com/caecus/avi2gif">avi2gif</a>
+            <li><h3><a href="http://github.com/caecus/avi2gif">avi2gif</a></h3>
               <ul>
                 <li>A simple tool to convert supported AVI files into GIF animations. Made for personal use in 2005, it grew in popularity on <a href="http://download.cnet.com/AVI2GIF/3000-2169_4-10445427.html?tag=mncol">download.com</a> and is now open source.</li>
               </ul>
             </li>
 
-            <li><a href="http://github.com/caecus/PRCO303">PRCO303</a>
+            <li><h3><a href="http://github.com/caecus/PRCO303">PRCO303</a></h3>
               <ul>
                 <li>University final-year project.</li>
               </ul>
             </li>
 
-            <li><a href="http://github.com/caecus/twitter-comments">Twitter Comments</a>
+            <li><h3><a href="http://github.com/caecus/twitter-comments">Twitter Comments</a></h3>
               <ul>
                 <li>A simple client-side Javascript library which allows comments for your website which also drive more traffic.</li>
               </ul>
