--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@ title: Lewis Oaten
 
         <!--INFO SECTION -->
         <div id="infosection">
-          <h1>At an early age, Lewis started taking apart PCs to develop an understanding of how they worked and also began to programme simple applications.</h1>
-          <h2>Since then he has worked at Lockheed Martin for a placement year in industry and also, for his own interest, produced applications in languages such as PHP, Java and C#. Having completed his industrial placement year with conspicuous success, he is now in the final year of his BSc (Hons) Computing course at the University of Plymouth.</h2>
+          <h1>{% include bio.textile %}</h1>
           <span id="infotab"></span>
         </div>
         <span id="onlinebanner"><a id="google" href="http://google.com/profiles/sphyrz"></a><a id="linkedin" href="http://uk.linkedin.com/in/lewisoaten"></a><a id="twitter" href="http://twitter.com/lewisoaten"></a><a id="github" href="http://github.com/caecus/"></a></span>
