Added muselive project

--- a/index.html
+++ b/index.html
@@ -37,13 +37,18 @@ title: Lewis Oaten
           </div>
 
           <div class="homecontent">
-            <h3><a href="http://github.com/caecus/PRCO303">PRCO303</a></h3>
+            <h3><a href="http://github.com/caecus/PRCO303">Collaborative Geospatial Environment</a></h3>
             <strong>University final-year project.</strong>
           </div>
 
           <div class="homecontent">
             <h3><a href="http://github.com/caecus/twitter-comments">Twitter Comments</a></h3>
             <strong>A simple client-side Javascript library which allows comments for your website which also drive more traffic.</strong>
+          </div>
+          
+          <div class="homecontent">
+            <h3><a href="http://www.muselive.com">Muselive</a></h3>
+            <strong>The most popular Muse fansite and largest instance of the LDU CMS.</strong>
           </div>
 
           <span id="projecttab"></span>
