Updating Jekyll config format

--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 ---
 layout: default
 title: Lewis Oaten
+tags: - Lewis
+      - Oaten
+      - Programming
+      - Development
+      - Software
+      - Engineering
+      - Code
+      - SVN
+      - Git
+      - Scrum
+      - XP
+      - Computing
 ---
 
         <!--INFO SECTION -->
@@ -45,7 +57,7 @@ title: Lewis Oaten
             <h3><a href="http://github.com/caecus/twitter-comments">Twitter Comments</a></h3>
             <strong>A simple client-side Javascript library which allows comments for your website which also drive more traffic.</strong>
           </div>
-          
+
           <div class="homecontent">
             <h3><a href="http://www.muselive.com">Muselive</a></h3>
             <strong>The most popular Muse fansite and largest instance of the LDU CMS.</strong>
