Changed to markdown and rogue

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ tags: - Lewis
 
         <!--INFO SECTION -->
         <div id="infosection">
-          <h1>{% include bio.textile %}</h1>
+          <h1>{% include bio.md %}</h1>
           <span id="infotab"></span>
         </div>
         <span id="onlinebanner"><a id="google" href="http://google.com/profiles/sphyrz"></a><a id="linkedin" href="http://uk.linkedin.com/in/lewisoaten"></a><a id="twitter" href="http://twitter.com/lewisoaten"></a><a id="github" href="http://github.com/caecus/"></a></span>
