tweaked tags format

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 ---
 layout: default
 title: Lewis Oaten
-tags: - Lewis
-      - Oaten
-      - Programming
-      - Development
-      - Software
-      - Engineering
-      - Code
-      - SVN
-      - Git
-      - Scrum
-      - XP
-      - Computing
+tags:
+  - Lewis
+  - Oaten
+  - Programming
+  - Development
+  - Software
+  - Engineering
+  - Code
+  - SVN
+  - Git
+  - Scrum
+  - XP
+  - Computing
 ---
 
         <!--INFO SECTION -->
