remvoed google profile and updated github link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ tags:
           <h1>{% include bio.md %}</h1>
           <span id="infotab"></span>
         </div>
-        <span id="onlinebanner"><a id="google" href="http://google.com/profiles/sphyrz"></a><a id="linkedin" href="http://uk.linkedin.com/in/lewisoaten"></a><a id="twitter" href="http://twitter.com/lewisoaten"></a><a id="github" href="http://github.com/caecus/"></a></span>
+        <span id="onlinebanner"><a id="linkedin" href="http://uk.linkedin.com/in/lewisoaten"></a><a id="twitter" href="http://twitter.com/lewisoaten"></a><a id="github" href="http://github.com/lewisoaten/"></a></span>
         <!--END INFO SECTION -->
 
         <!--BLOG SECTION -->
